tidy up event ids

--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
 
     <distributionManagement>
         <repository>
-            <id>org.powerbot.rsbot-api</id>
-            <name>GitHub powerbot Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/powbot/api</url>
+            <id>rsbot-api</id>
+            <name>powbot-api</name>
+            <url>https://maven.pkg.github.com/powbot</url>
         </repository>
     </distributionManagement>
 
