--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>RSBot API</name>
-    <groupId>org.powerbot</groupId>
-    <artifactId>rsbot-api</artifactId>
+    <name>PowBot API</name>
+    <groupId>org.powbot</groupId>
+    <artifactId>powbot-api</artifactId>
     <version>${revision}${sha1}${changelist}</version>
 
     <issueManagement>
@@ -22,7 +22,7 @@
 
     <distributionManagement>
         <repository>
-            <id>rsbot-api</id>
+            <id>powbot-api</id>
             <name>powbot-api</name>
             <url>https://maven.pkg.github.com/powbot</url>
         </repository>
