Add support for pending bank pin

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -63,3 +63,5 @@ PRAYER_QUICK_SELECTION=84
 PRAYER_SELECTION=83
 SPELLBOOK_WIDGET=218
 COMBAT_OPTIONS_WIDGET=593
+BANKPIN_PENDING_WIDGET=14
+BANKPIN_PENDING_COMPONENT=33
