--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <kotlin.compiler.languageVersion>1.4</kotlin.compiler.languageVersion>
         <kotlin.version>1.4.0</kotlin.version>
         <kotlinx.version>1.3.9</kotlinx.version>
         <dokka.version>1.4.0-rc</dokka.version>
