--- a/pom.xml
+++ b/pom.xml
@@ -22,13 +22,14 @@
 
     <distributionManagement>
         <repository>
-            <id>powbot-api</id>
+            <id>github</id>
             <name>powbot-api</name>
             <url>https://maven.pkg.github.com/powbot/api</url>
         </repository>
     </distributionManagement>
 
     <properties>
+        <github.global.server>github</github.global.server>
         <revision>8.1.4</revision>
         <changelist>-SNAPSHOT</changelist>
         <sha1/>
@@ -68,6 +69,10 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+            </plugin>
             <plugin>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
@@ -196,5 +201,13 @@
             <url>https://jcenter.bintray.com/</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 
 </project>
