--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <kotlin.compiler.languageVersion>1.4</kotlin.compiler.languageVersion>
         <kotlin.version>1.4.0</kotlin.version>
         <kotlinx.version>1.3.9</kotlinx.version>
-        <dokka.version>1.4.0-rc</dokka.version>
+        <dokka.version>1.4.20</dokka.version>
     </properties>
 
     <dependencies>
@@ -140,19 +140,34 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.jetbrains.dokka</groupId>
                 <artifactId>dokka-maven-plugin</artifactId>
                 <version>${dokka.version}</version>
                 <configuration>
+                    <moduleName>PowBot API</moduleName>
+                    <jdkVersion>11</jdkVersion>
                     <doctitle>${project.name} ${project.version}</doctitle>
+                    <sourceDirectories>
+                        <dir>src/main/java</dir>
+                        <dir>src/main/kotlin</dir>
+                    </sourceDirectories>
+                    <sourceRoots>
+                        <root>
+                            <path>src/main/kotlin</path>
+                            <platforms>JVM</platforms>
+                        </root>
+                        <root>
+                            <path>src/main/java</path>
+                            <platforms>JVM</platforms>
+                        </root>
+                    </sourceRoots>
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>package</phase>
+                        <phase>pre-site</phase>
                         <goals>
-                            <goal>javadocJar</goal>
+                            <goal>dokka</goal>
                         </goals>
                     </execution>
                 </executions>
