add model failsafe, banking failsafe

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -65,3 +65,6 @@ SPELLBOOK_WIDGET=218
 COMBAT_OPTIONS_WIDGET=593
 BANKPIN_PENDING_WIDGET=14
 BANKPIN_PENDING_COMPONENT=33
+BANK_COLLECTION_BOX_CLOSE_BUTTON_WIDGET=402
+BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT=2
+BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT_CHILD=11
