remove wrappers, just use interfaces

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -68,3 +68,5 @@ BANKPIN_PENDING_COMPONENT=33
 BANK_COLLECTION_BOX_CLOSE_BUTTON_WIDGET=402
 BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT=2
 BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT_CHILD=11
+DEATH_CHAT_WIDGET_ID=219
+DEATH_CHAT_WIDGET_COMPONENT_ID=1
