added grand exchange api

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -54,6 +54,7 @@ MOVEMENT_SPECIAL_ENERGY=31
 CHAT_INPUT=162
 CHAT_VIEWPORT=30
 CHAT_INPUT_TEXT=44
+CHAT_INPUT_ITEM=45
 CHAT_WIDGET=219
 PRAYER_QUICK_SELECT=77
 PRAYER_QUICK_SELECT_CONTAINER=4
@@ -70,3 +71,14 @@ BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT=2
 BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT_CHILD=11
 DEATH_CHAT_WIDGET_ID=219
 DEATH_CHAT_WIDGET_COMPONENT_ID=1
+GRAND_EXCHANGE_WIDGET_ID=465
+GRAND_EXCHANGE_INVENTORY_WIDGET_ID=467
+GRAND_EXCHANGE_CREATE_OFFER_COMPONENT=24
+GRAND_EXCHANGE_CREATE_OFFER_QUANTITY=32
+GRAND_EXCHANGE_CREATE_OFFER_PRICE=39
+GRAND_EXCHANGE_COLLECT_BUTTON_COMPONENT=6
+GRAND_EXCHANGE_COLLECT_BUTTON_CHILD=1
+GRAND_EXCHANGE_FIRST_OFFER_SLOT=7
+COLLECTION_BOX_WIDGET_ID=402
+COLLECTION_BOX_FIRST_OFFER_SLOT=5
+CAN_COLLECT_ITEM_TEXT_COLOR=16750623
