fix mobile viewport calc

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -70,3 +70,7 @@ BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT=2
 BANK_COLLECTION_BOX_CLOSE_BUTTON_COMPONENT_CHILD=11
 DEATH_CHAT_WIDGET_ID=219
 DEATH_CHAT_WIDGET_COMPONENT_ID=1
+MOBILE_VIEWPORT_WIDGET_ID=162
+MOBILE_VIEWPORT_COMPONENT_ID=3
+MOBILE_MAP_AND_ORBS_WIDGET_ID=601
+MOBILE_MAP_AND_ORBS_COMPONENT_ID=30
