add missing constant

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -122,3 +122,4 @@ COLLECTION_BOX_ITEM_TWO=4
 COLLECTION_BOX_TO_INVENTORY_BUTTON_COMPONENT=3
 COLLECTION_BOX_TO_INVENTORY_BUTTON_CHILD=1
 COLLECTION_BOX_TO_BANK_BUTTON_COMPONENT=4
+COLLECTION_BOX_TO_BANK_BUTTON_CHILD=1
