mobile tap to play login

--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -5,6 +5,7 @@ GAME_LOGGED=30
 LOGIN_STATE_WELCOME=0
 LOGIN_STATE_PVP_WARNING=1
 LOGIN_STATE_ENTER_CREDENTIALS=2
+CLIENT_STATE_MOBILE_PLAY_NOW=10
 LOGIN_STATE_DISCONNECTED=24
 BANK_WIDGET=12
 BANK_ITEMS=12
