--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -123,3 +123,6 @@ COLLECTION_BOX_TO_INVENTORY_BUTTON_COMPONENT=3
 COLLECTION_BOX_TO_INVENTORY_BUTTON_CHILD=1
 COLLECTION_BOX_TO_BANK_BUTTON_COMPONENT=4
 COLLECTION_BOX_TO_BANK_BUTTON_CHILD=1
+MOUSE_FUNCTION_VARPBIT=1055
+MOUSE_SINGLE_TAP_VARPBIT=170
+MOUSE_TOGGLE_WIDGET_COMPONENT=34
