--- a/src/main/resources/constants.properties
+++ b/src/main/resources/constants.properties
@@ -117,3 +117,15 @@ COLLECTION_BOX_TO_INVENTORY_BUTTON_COMPONENT=3
 COLLECTION_BOX_TO_INVENTORY_BUTTON_CHILD=1
 COLLECTION_BOX_TO_BANK_BUTTON_COMPONENT=4
 COLLECTION_BOX_TO_BANK_BUTTON_CHILD=1
+
+STORE_WIDGET_ID=300
+STORE_CLOSE_COMPONENT_ID=11
+STORE_BOUNDARIES_COMPONENT_ID=1
+STORE_SHOPNAME_SUB_COMPONENT_ID=1
+STORE_ITEMS_COMPONENT_ID=16
+STORE_QUANTITY_VALUE_COMPONENT_ID=6
+STORE_QUANTITY_ONE_COMPONENT_ID=9
+STORE_QUANTITY_FIVE_COMPONENT_ID=11
+STORE_QUANTITY_TEN_COMPONENT_ID=13
+STORE_QUANTITY_FIFTY_COMPONENT_ID=15
+
